# tagd

./: .gitignore  Cargo.toml
tagctl/: Cargo.toml
tagctl/src/: main.rs
tagd/: Cargo.toml
tagd-core/: Cargo.toml
tagd-core/src/: lib.rs  query.rs  tagger.rs
tagd/src/: db.rs  event.rs  main.rs  queue.rs  schema.sql  socket.rs  subprocess.rs  tagger.rs
tagd/src/event/: fanotify.rs
taggers/magika/: Cargo.toml
taggers/magika/src/: main.rs
taggers/std-mime/: Cargo.toml
taggers/std-mime/src/: main.rs
