[package]
name = "tagd"
version = "0.1.0"
edition = "2024"

[dependencies]
tagd-core = { path = "../tagd-core" }

nix = { version = "0.31.2", features = ["fanotify"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.102"
